Moved to CSS hiding / showing of children instead of dynamically creating and destroying. This is to increase speed of expand/collapse all functionality. More testing to be done before closing issue #1

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,6 +1,9 @@
 ul
   list-style-type: none
 
+.children-are-invisible ul
+  display: none
+
 .expand-all
   cursor: pointer
 
